@@ -22,6 +22,8 @@ import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.AuthorizationServiceException;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
@@ -254,7 +256,8 @@ public class RoomController {
 
     @PreAuthorize("isAuthenticated()")
     @PostMapping("/enter")
-    public String enterRoom(@AuthenticationPrincipal User user,
+    @ResponseBody
+    public ResponseEntity enterRoom(@AuthenticationPrincipal User user,
                             @RequestParam long roomId,
                             @RequestParam String accessToken,
                             @RequestBody List<SelectedDayWithTime> selectedDayWhitTimeList,
@@ -267,7 +270,9 @@ public class RoomController {
 
             addUserAuthority(user, roomId);
 
-            return "redirect:/room/%d/date".formatted(roomId);
+            Map<String, String> response = new HashMap<>();
+            response.put("redirectUrl", String.format("/room/%d/date", roomId));
+            return new ResponseEntity<>(response, HttpStatus.OK);
         }
 
         throw new AuthorizationServiceException("토큰값이 유효하지 않습니다.");
@@ -278,9 +283,9 @@ public class RoomController {
         List<GrantedAuthority> updatedAuthorities = new ArrayList<>(user.getAuthorities());
         updatedAuthorities.add(new SimpleGrantedAuthority("ROOM#%d_MEMBER".formatted(roomId)));
 
-        User updatedUser = new User(user.getUsername(), user.getPassword(), updatedAuthorities);
+        User updatedUser = new User(user.getUsername(), "", updatedAuthorities);
 
         SecurityContextHolder.getContext().setAuthentication(
-                new UsernamePasswordAuthenticationToken(updatedUser, user.getPassword(), updatedAuthorities));
+                new UsernamePasswordAuthenticationToken(updatedUser, "", updatedAuthorities));
     }
 }
